# wealthplan-dp

./: .gitignore  Dockerfile  README.md  math.py  pyproject.toml  requirements.txt
.github/workflows/: dev-docker-dp.yml  dev-docker-neural-agent.yml  dev-docker.yml
api/: app.py  models.py  run.py  schemas.py
backend/side_quest/: adams_optimizer.py
backend/src/config/: config_mapper.py
backend/src/config/deterministic/: bellman_config_mapper.py
backend/src/config/stochastic/: stochastic_config_mapper.py
backend/src/config/stochastic/bin_tree/: bin_tree_config_mapper.py
backend/src/config/stochastic/neural_agent/: neural_agent_config_mapper.py
backend/src/io_handler/: io_handler_base.py  local_io_handler.py  s3_io_handler.py
backend/src/parameterization/: parameter_loader.py
backend/src/result_cache/: result_cache.py
backend/src/scripts/: run_optimization_det.py  run_optimization_stoch.py  run_optimizer.py
backend/src/scripts/local/: run_optimization_stoch.py
backend/src/scripts/local/deterministic/: run_from_local.py  run_from_s3.py
backend/src/utils/: s3_loader.py
backend/src/wealthplan/cashflows/: cashflow_base.py  electricity.py  groceries.py  insurances.py  rent.py  salary.py
backend/src/wealthplan/cashflows/pension/: pension_plan.py
backend/src/wealthplan/optimizer/: bellman_optimizer.py  optimizer_base.py
backend/src/wealthplan/optimizer/deterministic/: bellman_optimizer.py  deterministic_bellman_optimizer.py
backend/src/wealthplan/optimizer/math_tools/: dynamic_wealth_grid.py  penality_functions.py  utility_functions.py
backend/src/wealthplan/optimizer/stochastic/: stochastic_optimizer.py
client/: esc_launcher.py  optimizer_client.py  s3_file_manager.py  upload_params_to_s3.py
docker/: Dockerfile
docker/dev/: Dockerfile  build_dev.bat  run_dev.bat
docker/wealthplan-dp/dev/: Dockerfile  build_dev.bat  run_dev.bat
docker/wealthplan-neural-agent/dev/: Dockerfile  build_dev.bat  run_dev.bat
docs/: design.md
examples/: example_consumption_only.py  example_with_portfolio.py
frontend/: index_dev.html
params/: savings_account.yaml
params/deterministic/: lifecycle_params.yaml
params/stochastic/bin_tree/: lifecycle_params.yaml  lifecycle_params_test.yaml
params/stochastic/neural_agent/: lifecycle_params.yaml  lifecycle_params_test.yaml
src/: financial_parameter_loader.py
src/wealthplan/: __init__.py  bellman.py  direct_solver.py  dp_solver.py  main.py  models.py  utils.py  wealth.py
src/wealthplan/cashflows/: base.py  electricity.py  essential_expenses.py  groceries.py  insurances.py  life_insurance.py  pension.py  pension_plan.py  rent.py  salary.py  telecommunication.py
src/wealthplan/cashflows/pension/: public_pension_plan.py  total_pension.py
src/wealthplan/cashflows/pension/private_pension_plans/: private_pension_plan.py  private_pension_plan_dynamic.py
src/wealthplan/optimizer/: bellman_optimizer.py  run_optimization.py  utility_functions.py
src/wealthplan/optimizer/deterministic/: base_optimizer.py  deterministic_bellman_optimizer.py  run_optimization.py
src/wealthplan/optimizer/deterministic/bellman/: bellman_optimizer.py
src/wealthplan/optimizer/deterministic/lagrange/: lagrange_optimizer.py
src/wealthplan/optimizer/math_tools/: dynamic_wealth_grid.py
src/wealthplan/optimizer/run/: run_optimization_det.py  run_optimization_stoch.py
src/wealthplan/optimizer/stochastic/: result_cache.py  run_optimization.py
src/wealthplan/optimizer/stochastic/bellmann/: bellman_optimizer.py
src/wealthplan/optimizer/stochastic/binomial_tree/: bin_tree_bellman_optimizer.py
src/wealthplan/optimizer/stochastic/lsmc/: lsmc_bellman_optimizer.py  run_optimization.py
src/wealthplan/optimizer/stochastic/survival_process/: survival_model.py  survival_process.py
src/wealthplan/optimizer/stochastic/wealth_regression/: wealth_regression.py
src/wealthplan/run/: run_optimization_det.py  run_optimization_stoch.py
tests/: test_dp_solver.py
(+37 files in other folders)
